src/scss/sections/_nav.scss
@use "../utils" as u;

nav.show {
    display: block;
}

.nav-logos-wrapper {
    display: flex;
    justify-content: center;
}

.personal-logo {
    height: 125px;
    width: 125px;
    align-self: center;
}

.mobile-menu {
    width: 45px;
    height: 45px;
    position: absolute;
    right: 0;
    margin: 2rem 1rem 2rem 0;
    color: var(--dark-yellow);
    cursor: pointer;

    @include u.breakpoint(desktop) {
        display: none;
    }
} 

nav {
    display: none;    // Initially

    position: fixed;
    top: 0;
    right: 0;
    width: 100%;
    height: 100vh;
    z-index: 999;    // for pos abs or fixed (high to sit on top of everything)
    padding: 3rem 1rem;
    background: var(--dark-yellow);

    @include u.breakpoint(desktop) {
        display: flex;
        background: none;
        position: unset;
        height: auto;
        padding: 1rem;
    }
}

.nav-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 90%;

    @include u.breakpoint(desktop) {
        flex-direction: row;
        width: 100%;
    }
}

.nav-items-container {
    margin: 2rem 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;

    @include u.breakpoint(desktop) {
        flex-direction: row;
        width: 100%;
        justify-content: space-evenly;
    }
}

.mobile-exit {
    width: 45px;
    height: 45px;
    margin-left: auto;
    cursor: pointer;

    @include u.breakpoint(desktop) {
        display: none;
    }
}

.primary-nav {
    display: flex;
    flex-direction: column;
    align-items: center;

    @include u.breakpoint(desktop) {
        flex-direction: row;
        width: 100%;
        justify-content: space-evenly;
    }
}

.secondary-nav {
    display: flex;
    flex-direction: column;
    align-items: center;

    @include u.breakpoint(desktop) {
        flex-direction: row;
    }
}

.nav-item {
    color: var(--background-blue);
    display: flex;
    justify-content: center;
    margin-bottom: 4rem;
    font-size: 24px;

    &:hover {
        font-weight: 600;
    }

    @include u.breakpoint(desktop) {
        color: var(--dark-yellow);
        text-transform: uppercase;
        font-size: 18px;
        // get rid of hower effect
    }
}

.nav-socials-container {
    display: flex;
    justify-content: space-evenly;

    @include u.breakpoint(desktop) {
        display: none;
    }
}

.button-resume {
    border: solid var(--coral) 1.5px;
    border-radius: 18px;
    padding: 0.69rem 0.5rem;
}

.top-nav-container {
    @include u.breakpoint(desktop) {
        padding: 0 3rem;
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
    }

    @include u.breakpoint(large-desktop) {
        padding: 0 6rem;
    }
}

